--- a/notebooks/02_baseline_dummy.ipynb
+++ b/notebooks/02_baseline_dummy.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "452649d2",
    "metadata": {},
    "outputs": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f85f1e88",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "073f019e",
    "metadata": {},
    "outputs": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "39862bbf",
    "metadata": {},
    "outputs": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "70eb5062",
    "metadata": {},
    "outputs": [
@@ -326,21 +326,24 @@
      "text": [
       "Resultados modelos ML:\n",
       "     baseline  macro_f1  macro_precision  macro_recall      n\n",
-      "0  rule_based  0.496333         0.503370      0.502395  646.0\n",
+      "0  rule_based  0.503060         0.516587      0.510629  646.0\n",
       "1       tfidf  0.755270         0.745770      0.768432  646.0\n",
       "2        beto  0.741577         0.736377      0.747711  646.0\n",
       "\n",
       "================================================================================\n",
-      "COMPARACIÓN COMPLETA (incluye dummy baselines)\n",
+      "TABLA CONSOLIDADA (todos los modelos)\n",
       "================================================================================\n",
       "          modelo  f1_macro  precision_macro  recall_macro  n_val\n",
       "           tfidf  0.755270         0.745770      0.768432  646.0\n",
       "            beto  0.741577         0.736377      0.747711  646.0\n",
-      "      rule_based  0.496333         0.503370      0.502395  646.0\n",
+      "      rule_based  0.503060         0.516587      0.510629  646.0\n",
       "dummy_stratified  0.493424         0.496048      0.495473  646.0\n",
       "  dummy_majority  0.428824         0.375387      0.500000  646.0\n",
       "\n",
-      "✓ Exportado: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/02_baselines_con_dummy.csv\n"
+      "✓ Exportado: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/02_baselines_con_dummy.csv\n",
+      "\n",
+      "📌 Para análisis completo, mejora vs dummy, y visualizaciones:\n",
+      "   → notebooks/02_comparacion_resultados.ipynb\n"
      ]
     }
    ],
