--- a/notebooks/02_create_splits.ipynb
+++ b/notebooks/02_create_splits.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "77559f7b",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "id": "ab455c72",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "id": "6e81d6a6",
    "metadata": {},
    "outputs": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "id": "25f5ad53",
    "metadata": {},
    "outputs": [
@@ -190,13 +190,6 @@
      "output_type": "stream",
      "text": [
       "Distribución de pacientes por clase mayoritaria:\n",
-      "etiqueta_mayoritaria\n",
-      "depresion    57\n",
-      "ansiedad     33\n",
-      "Name: count, dtype: int64\n",
-      "\n",
-      "Ratio ansiedad/depresión (pacientes): 0.58\n",
-      "\n",
       "etiqueta_mayoritaria\n",
       "depresion    57\n",
       "ansiedad     33\n",
@@ -239,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "id": "4885fcaf",
    "metadata": {},
    "outputs": [
@@ -290,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "id": "64bb5bd1",
    "metadata": {},
    "outputs": [
@@ -357,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "id": "f7a9079e",
    "metadata": {},
    "outputs": [
@@ -409,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "id": "540f3175",
    "metadata": {},
    "outputs": [
@@ -480,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "id": "7d5a256b",
    "metadata": {},
    "outputs": [
@@ -493,31 +486,31 @@
       "RESUMEN: SPLIT POR PACIENTES (SIN LEAKAGE)\n",
       "============================================================\n",
       "\n",
-      "📊 DATASET COMPLETO:\n",
+      "DATASET COMPLETO:\n",
       "  - 90 pacientes\n",
       "  - 3155 casos (consultas)\n",
       "  - 35.1 casos/paciente promedio\n",
       "\n",
-      "✂️  SPLIT REALIZADO:\n",
+      "SPLIT REALIZADO:\n",
       "  - Train: 72 pacientes (2509 casos)\n",
       "  - Val:   18 pacientes (646 casos)\n",
       "  - Ratio train/val: 4.0\n",
       "\n",
-      "✅ VERIFICACIÓN:\n",
+      "VERIFICACIÓN:\n",
       "  - Pacientes compartidos: 0 (0 = correcto)\n",
       "  - Estratificación por clase mayoritaria: ✓\n",
       "  - Random seed fijo: 42 (reproducible)\n",
       "\n",
-      "⚠️  CAMBIO vs SPLIT ANTERIOR (por casos):\n",
+      "CAMBIO vs SPLIT ANTERIOR (por casos):\n",
       "  - Antes: 100% pacientes en train Y val (leakage total)\n",
       "  - Ahora: 0% pacientes compartidos (sin leakage)\n",
       "  - Impacto esperado: F1 score bajará 3-5% (métricas reales)\n",
       "\n",
-      "📁 ARCHIVOS PARA BASELINES:\n",
+      "ARCHIVOS PARA BASELINES:\n",
       "  1. Cargar dataset_base.csv\n",
       "  2. Cargar train_indices.csv y val_indices.csv\n",
       "  3. Filtrar usando row_id\n",
-      "  4. ⚠️  RE-ENTRENAR TODOS LOS BASELINES con nuevos splits\n",
+      "  4. RE-ENTRENAR TODOS LOS BASELINES con nuevos splits\n",
       "\n",
       "============================================================\n",
       "IMPORTANTE: Este split DEBE ser usado por TODOS los baselines\n",
@@ -531,31 +524,31 @@
     "print(\"RESUMEN: SPLIT POR PACIENTES (SIN LEAKAGE)\")\n",
     "print(\"=\" * 60)\n",
     "\n",
-    "print(f\"\\n📊 DATASET COMPLETO:\")\n",
+    "print(f\"\\nDATASET COMPLETO:\")\n",
     "print(f\"  - {n_patients} pacientes\")\n",
     "print(f\"  - {n_cases} casos (consultas)\")\n",
     "print(f\"  - {avg_cases:.1f} casos/paciente promedio\")\n",
     "\n",
-    "print(f\"\\n✂️  SPLIT REALIZADO:\")\n",
+    "print(f\"\\nSPLIT REALIZADO:\")\n",
     "print(f\"  - Train: {len(train_patients)} pacientes ({len(train_idx)} casos)\")\n",
     "print(f\"  - Val:   {len(val_patients)} pacientes ({len(val_idx)} casos)\")\n",
     "print(f\"  - Ratio train/val: {len(train_patients)/len(val_patients):.1f}\")\n",
     "\n",
-    "print(f\"\\n✅ VERIFICACIÓN:\")\n",
+    "print(f\"\\nVERIFICACIÓN:\")\n",
     "print(f\"  - Pacientes compartidos: {len(overlap_check)} (0 = correcto)\")\n",
     "print(f\"  - Estratificación por clase mayoritaria: ✓\")\n",
     "print(f\"  - Random seed fijo: {RANDOM_STATE} (reproducible)\")\n",
     "\n",
-    "print(f\"\\n⚠️  CAMBIO vs SPLIT ANTERIOR (por casos):\")\n",
+    "print(f\"\\nCAMBIO vs SPLIT ANTERIOR (por casos):\")\n",
     "print(f\"  - Antes: 100% pacientes en train Y val (leakage total)\")\n",
     "print(f\"  - Ahora: 0% pacientes compartidos (sin leakage)\")\n",
     "print(f\"  - Impacto esperado: F1 score bajará 3-5% (métricas reales)\")\n",
     "\n",
-    "print(f\"\\n📁 ARCHIVOS PARA BASELINES:\")\n",
+    "print(f\"\\nARCHIVOS PARA BASELINES:\")\n",
     "print(f\"  1. Cargar {dataset_base_path.name}\")\n",
     "print(f\"  2. Cargar {train_indices_path.name} y {val_indices_path.name}\")\n",
     "print(f\"  3. Filtrar usando row_id\")\n",
-    "print(f\"  4. ⚠️  RE-ENTRENAR TODOS LOS BASELINES con nuevos splits\")\n",
+    "print(f\"  4. RE-ENTRENAR TODOS LOS BASELINES con nuevos splits\")\n",
     "\n",
     "print(\"\\n\" + \"=\" * 60)\n",
     "print(\"IMPORTANTE: Este split DEBE ser usado por TODOS los baselines\")\n",
@@ -565,8 +558,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
