Ajustes splits y CVs para validacion de baselines

--- a/notebooks/00_setup.ipynb
+++ b/notebooks/00_setup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,25 @@
       "  [OK] plotly\n",
       "\n",
       "NLP/Texto:\n",
+      "  [OK] transformers\n",
+      "  [OK] torch\n",
+      "\n",
+      "Visualización:\n",
+      "  [OK] matplotlib\n",
+      "  [OK] seaborn\n",
+      "  [OK] plotly\n",
+      "\n",
+      "NLP/Texto:\n",
       "  [OK] nltk\n",
+      "  [OK] nltk\n",
+      "  [OK] spacy\n",
+      "\n",
+      "Utilities:\n",
+      "  [OK] yaml\n",
+      "  [OK] tqdm\n",
+      "\n",
+      "[INFO] Todas las dependencias instaladas correctamente\n",
+      "============================================================\n",
       "  [OK] spacy\n",
       "\n",
       "Utilities:\n",
@@ -272,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
