--- a/notebooks/01_eda_understanding.ipynb
+++ b/notebooks/01_eda_understanding.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "34d64bbb",
    "metadata": {},
    "outputs": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "230abfdf",
    "metadata": {},
    "outputs": [
@@ -221,7 +221,7 @@
        "4  ansiedad  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,10 +260,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "d5580a60",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "============================================================\n",
+      " ANÁLISIS DE ESTRUCTURA LONGITUDINAL\n",
+      "============================================================\n",
+      "Pacientes únicos: 90\n",
+      "Casos totales (consultas): 3,155\n",
+      "Promedio casos/paciente: 35.1\n",
+      "Mediana casos/paciente: 34\n",
+      "Min-Max casos/paciente: 6-65\n",
+      "\n",
+      "  IMPLICACIÓN PARA SPLITS:\n",
+      "   Con 35.1 casos/paciente, un split ALEATORIO\n",
+      "   por casos pondría el 100% de pacientes en train Y val\n",
+      "   → SOLUCIÓN: Split por PACIENTES (ver 02_create_splits.ipynb)\n",
+      "\n",
+      " Distribución de casos/paciente:\n",
+      "count    90.000000\n",
+      "mean     35.055556\n",
+      "std      11.647791\n",
+      "min       6.000000\n",
+      "25%      27.000000\n",
+      "50%      33.500000\n",
+      "75%      42.750000\n",
+      "max      65.000000\n",
+      "Name: count, dtype: float64\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -383,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "ed6bdcf5",
    "metadata": {},
    "outputs": [
@@ -420,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "c02b8812",
    "metadata": {},
    "outputs": [
@@ -452,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "5c62e8b7",
    "metadata": {},
    "outputs": [
@@ -509,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "a1582a6d",
    "metadata": {},
    "outputs": [
@@ -601,7 +631,7 @@
        "4  reposicion segun indicaciones de tratante 2) EXAMEN FISICO GRAL. Y GINECOLOGICO PESO ( ) TALLA ( ) PRESION ARTERIAL ...  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "d23ff33b",
    "metadata": {},
    "outputs": [
@@ -819,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "bf332c8c",
    "metadata": {},
    "outputs": [
@@ -863,6 +893,13 @@
       "\n",
       "   DESPUÉS (32 oraciones, 0 duplicadas):\n",
       "   Acude con la hija y con el hijo que vive con ella. - RMN de cráneo del 5/VII/2021: Normal. - Ecocardiograma del IPS de fecha 26/VII/2021: DD tipo I, r...\n",
+      "\n",
+      "================================================================================\n",
+      " RESULTADOS DE LIMPIEZA\n",
+      "================================================================================\n",
+      "Caracteres antes: 5,888,260\n",
+      "Caracteres después: 3,517,048\n",
+      "Reducción: 2,371,212 caracteres (40.3%)\n",
       "\n",
       "Oraciones duplicadas después de limpieza: 0\n",
       "✓ Limpieza exitosa\n",
@@ -984,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "id": "d12c2a03",
    "metadata": {},
    "outputs": [
@@ -1042,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "f3613818",
    "metadata": {},
    "outputs": [
@@ -1055,6 +1092,15 @@
       "================================================================================\n",
       "Duplicados exactos encontrados: 28 / 3155\n",
       "Proporción: 0.89%\n",
+      "\n",
+      "✓ Dataset sin duplicados: (3127, 20)\n",
+      "  Eliminados: 28 registros\n",
+      "✓ Verificado: No hay textos duplicados restantes\n",
+      "\n",
+      "📋 Ejemplos de textos duplicados (mostrando primeros 3):\n",
+      "  1. Acude sin cita para consulta de urgenca debido a que desde ayer esta en Acude si...\n",
+      "  2. ACUDE A RETIRAR MEDICACION ACUDE A RETIRAR MEDICACION REPOSICION DE MEDICACION D...\n",
+      "  3. retira medicación 2) EXAMEN FISICO GRAL. Y GINECOLOGICO PESO ( ) TALLA ( ) PRESI...\n",
       "\n",
       "✓ Dataset sin duplicados: (3127, 20)\n",
       "  Eliminados: 28 registros\n",
@@ -1102,10 +1148,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "id": "b89fd726",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Columnas finales: ['id_paciente', 'fecha', 'etiqueta', 'texto']\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -1196,7 +1249,7 @@
        "4  reposicion segun indicaciones de tratante 2) EXAMEN FISICO GRAL. Y GINECOLOGICO PESO ( ) TALLA ( ) PRESION ARTERIAL ...  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1222,10 +1275,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "id": "ec22dc3a",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Distribución de clases:\n",
+      "etiqueta\n",
+      "depresion    2202\n",
+      "ansiedad      925\n",
+      "Name: count, dtype: int64\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -1270,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "id": "bd3de6ed",
    "metadata": {},
    "outputs": [
@@ -1331,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "id": "9426ba0e",
    "metadata": {},
    "outputs": [
@@ -1757,7 +1821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "id": "2c38ca13",
    "metadata": {},
    "outputs": [
@@ -1786,7 +1850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "id": "807fb6de",
    "metadata": {},
    "outputs": [
@@ -2001,7 +2065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "id": "5a3eae15",
    "metadata": {},
    "outputs": [
@@ -2033,7 +2097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "id": "a909c720",
    "metadata": {},
    "outputs": [
