--- a/notebooks/02_baseline_tfidf.ipynb
+++ b/notebooks/02_baseline_tfidf.ipynb
@@ -127,26 +127,26 @@
       "============================================================\n",
       "CARGA DE SPLITS (PATIENT-LEVEL)\n",
       "============================================================\n",
-      "✓ Dataset base: 3155 casos\n",
-      "✓ Train indices: 2509 casos\n",
-      "✓ Val indices: 646 casos\n",
+      "✓ Dataset base: 3127 casos\n",
+      "✓ Train indices: 1849 casos\n",
+      "✓ Dev indices: 641 casos\n",
       "\n",
       "[INFO] Split aplicado (patient-level):\n",
-      "  Train: 2509 casos\n",
-      "  Val:   646 casos\n",
+      "  Train: 1849 casos\n",
+      "  Val:   641 casos\n",
       "\n",
-      "[INFO] Distribución train: {'depresion': 1745, 'ansiedad': 764}\n",
-      "[INFO] Distribución val: {'depresion': 485, 'ansiedad': 161}\n",
+      "[INFO] Distribución train: {'depresion': 1270, 'ansiedad': 579}\n",
+      "[INFO] Distribución val: {'depresion': 456, 'ansiedad': 185}\n",
       "\n",
       "  RECORDATORIO: Estos splits eliminan leakage (pacientes disjuntos)\n",
       "   Métricas serán más conservadoras pero generalizan mejor.\n",
       "\n",
       "[INFO] Split aplicado (patient-level):\n",
-      "  Train: 2509 casos\n",
-      "  Val:   646 casos\n",
+      "  Train: 1849 casos\n",
+      "  Val:   641 casos\n",
       "\n",
-      "[INFO] Distribución train: {'depresion': 1745, 'ansiedad': 764}\n",
-      "[INFO] Distribución val: {'depresion': 485, 'ansiedad': 161}\n",
+      "[INFO] Distribución train: {'depresion': 1270, 'ansiedad': 579}\n",
+      "[INFO] Distribución val: {'depresion': 456, 'ansiedad': 185}\n",
       "\n",
       "  RECORDATORIO: Estos splits eliminan leakage (pacientes disjuntos)\n",
       "   Métricas serán más conservadoras pero generalizan mejor.\n"
@@ -180,11 +180,11 @@
     "\n",
     "dataset_base = pd.read_csv(SPLITS_PATH / 'dataset_base.csv')\n",
     "train_indices = pd.read_csv(SPLITS_PATH / 'train_indices.csv')['row_id'].values\n",
-    "val_indices = pd.read_csv(SPLITS_PATH / 'val_indices.csv')['row_id'].values\n",
+    "dev_indices = pd.read_csv(SPLITS_PATH / 'dev_indices.csv')['row_id'].values\n",
     "\n",
     "print(f\"✓ Dataset base: {len(dataset_base)} casos\")\n",
     "print(f\"✓ Train indices: {len(train_indices)} casos\")\n",
-    "print(f\"✓ Val indices: {len(val_indices)} casos\")\n",
+    "print(f\"✓ Dev indices: {len(dev_indices)} casos\")\n",
     "\n",
     "text_col = _guess_text_col(dataset_base)\n",
     "label_col = _guess_label_col(dataset_base)\n",
@@ -232,7 +232,7 @@
     "\n",
     "# Filtrar por índices (patient-level split)\n",
     "df_train = dataset_base[dataset_base['row_id'].isin(train_indices)].copy()\n",
-    "df_val = dataset_base[dataset_base['row_id'].isin(val_indices)].copy()\n",
+    "df_val = dataset_base[dataset_base['row_id'].isin(dev_indices)].copy()\n",
     "\n",
     "X_train, y_train = df_train['texto_ml'], df_train[label_col]\n",
     "X_val, y_val = df_val['texto_ml'], df_val[label_col]\n",
@@ -295,7 +295,35 @@
    "id": "ff481a1c",
    "metadata": {},
    "source": [
-    "## 3) Métricas y exportables"
+    "## 3) Métricas y exportables\n",
+    "\n",
+    "**⚠️ IMPORTANTE - MANEJO DE CASOS NEUTRALES (TF-IDF vs Rule-Based):**\n",
+    "\n",
+    "**TF-IDF es un modelo ML BINARIO FORZADO:**\n",
+    "- LinearSVC genera **solo 2 salidas posibles**: ansiedad o depresión\n",
+    "- **NO puede abstenerse** ni generar predicciones \"neutral\"\n",
+    "- Siempre clasifica cada caso en una de las dos clases (decisión forzada)\n",
+    "\n",
+    "**Diferencia con Rule-Based:**\n",
+    "- **Rule-Based:** Puede devolver \"neutral\" (~78.4% casos sin matches)\n",
+    "  - Tiene 3 salidas: ansiedad, depresión, neutral\n",
+    "  - Para comparar con TF-IDF, convierte neutrales → mayoritaria\n",
+    "  \n",
+    "- **TF-IDF:** Siempre binario (0% neutrales)\n",
+    "  - Tiene 2 salidas: ansiedad o depresión\n",
+    "  - Aprende frontera de decisión en espacio char n-grams\n",
+    "  - Incluso casos ambiguos son forzados a una clase\n",
+    "\n",
+    "**Implicaciones para comparación:**\n",
+    "1. ✅ TF-IDF comparable directamente con Dummy/BETO (todos binarios)\n",
+    "2. ⚠️ Comparación con Rule-Based es INJUSTA:\n",
+    "   - F1 RB bajo = 78% neutrales + errores en 22% detectado\n",
+    "   - F1 TF-IDF alto = decisión forzada en 100% casos\n",
+    "3. 📊 Gap real: TF-IDF aprende vocabulario paraguayo que RB no cubre\n",
+    "\n",
+    "**En este notebook:**\n",
+    "- NO hay conversión de neutrales (modelo binario puro)\n",
+    "- Métricas reflejan capacidad discriminativa directa"
    ]
   },
   {
@@ -366,10 +394,10 @@
      "output_type": "stream",
      "text": [
       "[INFO] Análisis de errores exportado:\n",
-      "  FP Depresión: 50 casos → tfidf_fp_depresion.csv\n",
-      "  FN Depresión: 74 casos → tfidf_fn_depresion.csv\n",
-      "  FP Ansiedad:  74 casos → tfidf_fp_ansiedad.csv\n",
-      "  FN Ansiedad:  50 casos → tfidf_fn_ansiedad.csv\n"
+      "  FP Depresión: 42 casos → tfidf_fp_depresion.csv\n",
+      "  FN Depresión: 27 casos → tfidf_fn_depresion.csv\n",
+      "  FP Ansiedad:  27 casos → tfidf_fp_ansiedad.csv\n",
+      "  FN Ansiedad:  42 casos → tfidf_fn_ansiedad.csv\n"
      ]
     }
    ],
@@ -410,6 +438,335 @@
     "print(f\"  FN Depresión: {len(fn_depresion)} casos → {tfidf_fn_dep_csv.name}\")\n",
     "print(f\"  FP Ansiedad:  {len(fp_ansiedad)} casos → {tfidf_fp_ans_csv.name}\")\n",
     "print(f\"  FN Ansiedad:  {len(fn_ansiedad)} casos → {tfidf_fn_ans_csv.name}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38152271",
+   "metadata": {},
+   "source": [
+    "## 5) Cross-Validation 5-Fold (Evaluación Robusta)\n",
+    "\n",
+    "**Estrategia final:** Evaluar con CV para estimar F1 con intervalos de confianza.\n",
+    "\n",
+    "**Justificación:**\n",
+    "- Dataset pequeño (90 pacientes) → alta varianza por muestreo\n",
+    "- Single test set (18 pacientes) puede variar ±10-15% por azar\n",
+    "- CV 5-fold usa TODOS los datos → estimación más confiable\n",
+    "- Permite reportar: F1 = 0.85 ± 0.03 (IC95%)\n",
+    "\n",
+    "**Resultados previos:**\n",
+    "- Dev 60/20/20: F1 = 0.866 (18 pacientes)\n",
+    "- Test 60/20/20: F1 = 0.786 (18 pacientes)\n",
+    "- **Varianza observada:** 8 puntos de F1 entre evaluaciones\n",
+    "\n",
+    "**Objetivo:** Estimar F1 real con todos los pacientes y cuantificar varianza.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**⚠️ MANEJO DE NEUTRALES EN CV:**\n",
+    "\n",
+    "**TF-IDF NO genera predicciones neutrales en ningún fold:**\n",
+    "- Modelo ML binario forzado (LinearSVC con 2 clases)\n",
+    "- Varianza de CV refleja **solo capacidad de generalización**\n",
+    "- NO hay conversión de neutrales (contrario a Rule-Based)\n",
+    "\n",
+    "**Diferencia con Rule-Based CV:**\n",
+    "- **Rule-Based:** ~78% neutrales por fold → convertidos a mayoritaria\n",
+    "  - Varianza CV = heterogeneidad dataset + cobertura variable\n",
+    "  - F1 penalizado por falta de cobertura\n",
+    "  \n",
+    "- **TF-IDF:** 0% neutrales (binario puro)\n",
+    "  - Varianza CV = capacidad de generalizar entre folds\n",
+    "  - F1 refleja discriminación real (no penalización por cobertura)\n",
+    "\n",
+    "**Interpretación:**\n",
+    "- Si TF-IDF tiene menor varianza que RB → aprende mejor\n",
+    "- Si F1 TF-IDF >> F1 RB → vocabulario ML cubre dataset completo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d1388140",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "================================================================================\n",
+      "CROSS-VALIDATION 5-FOLD (PATIENT-LEVEL)\n",
+      "================================================================================\n",
+      "\n",
+      "✓ Dataset completo: 3126 casos\n",
+      "✓ Pacientes únicos: 90\n",
+      "\n",
+      "Fold 1/5... ✓ Dataset completo: 3126 casos\n",
+      "✓ Pacientes únicos: 90\n",
+      "\n",
+      "Fold 1/5... F1=0.801, Prec=0.817, Rec=0.790\n",
+      "Fold 2/5... F1=0.801, Prec=0.817, Rec=0.790\n",
+      "Fold 2/5... F1=0.867, Prec=0.876, Rec=0.859\n",
+      "Fold 3/5... F1=0.867, Prec=0.876, Rec=0.859\n",
+      "Fold 3/5... F1=0.843, Prec=0.831, Rec=0.866\n",
+      "Fold 4/5... F1=0.843, Prec=0.831, Rec=0.866\n",
+      "Fold 4/5... F1=0.883, Prec=0.904, Rec=0.868\n",
+      "Fold 5/5... F1=0.883, Prec=0.904, Rec=0.868\n",
+      "Fold 5/5... F1=0.854, Prec=0.838, Rec=0.878\n",
+      "\n",
+      "================================================================================\n",
+      "RESULTADOS CROSS-VALIDATION\n",
+      "================================================================================\n",
+      "\n",
+      " fold  f1_macro  precision   recall  n_test_patients\n",
+      "    1  0.801422   0.817126 0.789808               18\n",
+      "    2  0.866665   0.875965 0.859445               18\n",
+      "    3  0.842912   0.831371 0.866074               18\n",
+      "    4  0.883363   0.903846 0.867605               18\n",
+      "    5  0.853742   0.838419 0.877597               18\n",
+      "\n",
+      "📊 ESTADÍSTICAS:\n",
+      "   F1 macro:  0.850 ± 0.031\n",
+      "   Precision: 0.853 ± 0.036\n",
+      "   Recall:    0.852 ± 0.035\n",
+      "\n",
+      "   F1 min-max: [0.801, 0.883]\n",
+      "   F1 IC95%:   [0.789, 0.910]\n",
+      "   Varianza:   0.082 puntos entre folds\n",
+      "\n",
+      "🔍 INTERPRETACIÓN:\n",
+      "   • F1 varía 0.082 puntos entre folds → normal en dataset pequeño\n",
+      "   • IC95%: [0.789, 0.910] → rango esperado para nuevos pacientes\n",
+      "   • TF-IDF generaliza bien (modelo binario forzado, 0% neutrales)\n",
+      "\n",
+      "📈 CONCLUSIÓN:\n",
+      "   • F1 TF-IDF (CV): 0.850 ± 0.031\n",
+      "   • IC95%: [0.789, 0.910]\n",
+      "   • Varianza: 0.082 puntos (normal en 90 pacientes)\n",
+      "   • Comparación: Dummy Stratified (0.50) → TF-IDF (0.85) = +70% mejora\n",
+      "\n",
+      "💾 Resultados exportados: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/cv_results/tfidf_cv_results.csv\n",
+      "\n",
+      "================================================================================\n",
+      "✅ Cross-Validation completado\n",
+      "================================================================================\n",
+      "F1=0.854, Prec=0.838, Rec=0.878\n",
+      "\n",
+      "================================================================================\n",
+      "RESULTADOS CROSS-VALIDATION\n",
+      "================================================================================\n",
+      "\n",
+      " fold  f1_macro  precision   recall  n_test_patients\n",
+      "    1  0.801422   0.817126 0.789808               18\n",
+      "    2  0.866665   0.875965 0.859445               18\n",
+      "    3  0.842912   0.831371 0.866074               18\n",
+      "    4  0.883363   0.903846 0.867605               18\n",
+      "    5  0.853742   0.838419 0.877597               18\n",
+      "\n",
+      "📊 ESTADÍSTICAS:\n",
+      "   F1 macro:  0.850 ± 0.031\n",
+      "   Precision: 0.853 ± 0.036\n",
+      "   Recall:    0.852 ± 0.035\n",
+      "\n",
+      "   F1 min-max: [0.801, 0.883]\n",
+      "   F1 IC95%:   [0.789, 0.910]\n",
+      "   Varianza:   0.082 puntos entre folds\n",
+      "\n",
+      "🔍 INTERPRETACIÓN:\n",
+      "   • F1 varía 0.082 puntos entre folds → normal en dataset pequeño\n",
+      "   • IC95%: [0.789, 0.910] → rango esperado para nuevos pacientes\n",
+      "   • TF-IDF generaliza bien (modelo binario forzado, 0% neutrales)\n",
+      "\n",
+      "📈 CONCLUSIÓN:\n",
+      "   • F1 TF-IDF (CV): 0.850 ± 0.031\n",
+      "   • IC95%: [0.789, 0.910]\n",
+      "   • Varianza: 0.082 puntos (normal en 90 pacientes)\n",
+      "   • Comparación: Dummy Stratified (0.50) → TF-IDF (0.85) = +70% mejora\n",
+      "\n",
+      "💾 Resultados exportados: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/cv_results/tfidf_cv_results.csv\n",
+      "\n",
+      "================================================================================\n",
+      "✅ Cross-Validation completado\n",
+      "================================================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "\n",
+    "print(\"=\"*80)\n",
+    "print(\"CROSS-VALIDATION 5-FOLD (PATIENT-LEVEL)\")\n",
+    "print(\"=\"*80)\n",
+    "print()\n",
+    "\n",
+    "# Configuración\n",
+    "N_SPLITS = 5\n",
+    "RANDOM_STATE = 42\n",
+    "\n",
+    "# Preparar dataset con row_id\n",
+    "df_full = dataset_base.copy()\n",
+    "if 'row_id' not in df_full.columns:\n",
+    "    df_full = df_full.reset_index(drop=True)\n",
+    "    df_full['row_id'] = df_full.index\n",
+    "\n",
+    "# Limpiar NaNs\n",
+    "df_full = df_full.dropna(subset=['texto', label_col]).copy()\n",
+    "df_full['texto_ml'] = df_full['texto'].map(clean_text_ml)\n",
+    "\n",
+    "print(f\"✓ Dataset completo: {len(df_full)} casos\")\n",
+    "print(f\"✓ Pacientes únicos: {df_full['patient_id'].nunique()}\")\n",
+    "print()\n",
+    "\n",
+    "# Obtener etiqueta mayoritaria por paciente (para stratification)\n",
+    "patient_labels = df_full.groupby('patient_id')[label_col].agg(\n",
+    "    lambda x: x.value_counts().index[0]\n",
+    ").reset_index()\n",
+    "patient_labels.columns = ['patient_id', 'label_majority']\n",
+    "\n",
+    "# Crear folds stratificados\n",
+    "skf = StratifiedKFold(n_splits=N_SPLITS, shuffle=True, random_state=RANDOM_STATE)\n",
+    "patient_ids = patient_labels['patient_id'].values\n",
+    "patient_y = patient_labels['label_majority'].values\n",
+    "\n",
+    "# Ejecutar CV\n",
+    "cv_results = []\n",
+    "\n",
+    "for fold_idx, (train_patient_idx, test_patient_idx) in enumerate(skf.split(patient_ids, patient_y), start=1):\n",
+    "    print(f\"Fold {fold_idx}/{N_SPLITS}...\", end=\" \")\n",
+    "    \n",
+    "    # Obtener pacientes\n",
+    "    train_patients = patient_ids[train_patient_idx]\n",
+    "    test_patients = patient_ids[test_patient_idx]\n",
+    "    \n",
+    "    # Filtrar casos\n",
+    "    train_df = df_full[df_full['patient_id'].isin(train_patients)]\n",
+    "    test_df = df_full[df_full['patient_id'].isin(test_patients)]\n",
+    "    \n",
+    "    X_train_cv = train_df['texto_ml']\n",
+    "    y_train_cv = train_df[label_col]\n",
+    "    X_test_cv = test_df['texto_ml']\n",
+    "    y_test_cv = test_df[label_col]\n",
+    "    \n",
+    "    # Entrenar modelo (mismo pipeline que antes)\n",
+    "    clf_cv = Pipeline([\n",
+    "        ('tfidf', TfidfVectorizer(\n",
+    "            analyzer='char_wb',\n",
+    "            ngram_range=(3, 5),\n",
+    "            min_df=2,\n",
+    "            max_df=0.95\n",
+    "        )),\n",
+    "        ('svm', LinearSVC(class_weight='balanced', random_state=42, max_iter=2000))\n",
+    "    ])\n",
+    "    \n",
+    "    clf_cv.fit(X_train_cv, y_train_cv)\n",
+    "    y_pred_cv = clf_cv.predict(X_test_cv)\n",
+    "    \n",
+    "    # Métricas\n",
+    "    f1_cv = f1_score(y_test_cv, y_pred_cv, average='macro', zero_division=0)\n",
+    "    prec_cv = precision_score(y_test_cv, y_pred_cv, average='macro', zero_division=0)\n",
+    "    rec_cv = recall_score(y_test_cv, y_pred_cv, average='macro', zero_division=0)\n",
+    "    \n",
+    "    cv_results.append({\n",
+    "        'fold': fold_idx,\n",
+    "        'f1_macro': f1_cv,\n",
+    "        'precision': prec_cv,\n",
+    "        'recall': rec_cv,\n",
+    "        'n_train_patients': len(train_patients),\n",
+    "        'n_test_patients': len(test_patients),\n",
+    "        'n_train_cases': len(X_train_cv),\n",
+    "        'n_test_cases': len(X_test_cv)\n",
+    "    })\n",
+    "    \n",
+    "    print(f\"F1={f1_cv:.3f}, Prec={prec_cv:.3f}, Rec={rec_cv:.3f}\")\n",
+    "\n",
+    "# Resultados\n",
+    "cv_df = pd.DataFrame(cv_results)\n",
+    "\n",
+    "print()\n",
+    "print(\"=\"*80)\n",
+    "print(\"RESULTADOS CROSS-VALIDATION\")\n",
+    "print(\"=\"*80)\n",
+    "print()\n",
+    "print(cv_df[['fold', 'f1_macro', 'precision', 'recall', 'n_test_patients']].to_string(index=False))\n",
+    "print()\n",
+    "\n",
+    "# Estadísticas\n",
+    "f1_mean = cv_df['f1_macro'].mean()\n",
+    "f1_std = cv_df['f1_macro'].std()\n",
+    "f1_min = cv_df['f1_macro'].min()\n",
+    "f1_max = cv_df['f1_macro'].max()\n",
+    "f1_ci_lower = f1_mean - 1.96 * f1_std\n",
+    "f1_ci_upper = f1_mean + 1.96 * f1_std\n",
+    "\n",
+    "print(f\"📊 ESTADÍSTICAS:\") \n",
+    "print(f\"   F1 macro:  {f1_mean:.3f} ± {f1_std:.3f}\")\n",
+    "print(f\"   Precision: {cv_df['precision'].mean():.3f} ± {cv_df['precision'].std():.3f}\")\n",
+    "print(f\"   Recall:    {cv_df['recall'].mean():.3f} ± {cv_df['recall'].std():.3f}\")\n",
+    "print()\n",
+    "print(f\"   F1 min-max: [{f1_min:.3f}, {f1_max:.3f}]\")\n",
+    "print(f\"   F1 IC95%:   [{f1_ci_lower:.3f}, {f1_ci_upper:.3f}]\")\n",
+    "print(f\"   Varianza:   {(f1_max - f1_min):.3f} puntos entre folds\")\n",
+    "print()\n",
+    "\n",
+    "# Interpretación\n",
+    "print(\"🔍 INTERPRETACIÓN:\")\n",
+    "print(f\"   • F1 varía {(f1_max - f1_min):.3f} puntos entre folds → normal en dataset pequeño\")\n",
+    "print(f\"   • IC95%: [{f1_ci_lower:.3f}, {f1_ci_upper:.3f}] → rango esperado para nuevos pacientes\")\n",
+    "print(f\"   • TF-IDF generaliza bien (modelo binario forzado, 0% neutrales)\")\n",
+    "\n",
+    "print()\n",
+    "print(f\"📈 CONCLUSIÓN:\")\n",
+    "print(f\"   • F1 TF-IDF (CV): {f1_mean:.3f} ± {f1_std:.3f}\")\n",
+    "print(f\"   • IC95%: [{f1_ci_lower:.3f}, {f1_ci_upper:.3f}]\")\n",
+    "print(f\"   • Varianza: {(f1_max - f1_min):.3f} puntos (normal en 90 pacientes)\")\n",
+    "print(f\"   • Comparación: Dummy Stratified (0.50) → TF-IDF (0.85) = +70% mejora\")\n",
+    "print()\n",
+    "\n",
+    "# Exportar\n",
+    "cv_output = DATA_PATH / 'cv_results' / 'tfidf_cv_results.csv'\n",
+    "cv_output.parent.mkdir(exist_ok=True)\n",
+    "cv_df.to_csv(cv_output, index=False)\n",
+    "print(f\"💾 Resultados exportados: {cv_output}\")\n",
+    "print()\n",
+    "print(\"=\"*80)\n",
+    "print(\"✅ Cross-Validation completado\")\n",
+    "print(\"=\"*80)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0c4cb31",
+   "metadata": {},
+   "source": [
+    "## 6) Exportar Resultados y Próximos Pasos\n",
+    "\n",
+    "**✅ Archivos generados por este baseline:**\n",
+    "\n",
+    "Evaluación en dev set:\n",
+    "- `tfidf_predictions.csv` - Predicciones por caso\n",
+    "- `tfidf_eval.csv` - Métricas macro agregadas\n",
+    "- `tfidf_classification_report.csv` - Reporte por clase\n",
+    "- `tfidf_confusion_matrix.csv` - Matriz de confusión\n",
+    "\n",
+    "Cross-Validation:\n",
+    "- `cv_results/tfidf_cv_results.csv` - Resultados 5-fold CV\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**📊 Para análisis comparativo completo:**\n",
+    "→ Ejecutar notebook: `02_comparacion_resultados.ipynb`\n",
+    "\n",
+    "Este notebook consolida todos los resultados CV, calcula estadísticas (IC95%), compara modelos, y genera visualizaciones e interpretación para paper/tesis.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**📝 Notas metodológicas:**\n",
+    "- **Dataset:** dataset_base.csv (3,155 casos, 90 pacientes)\n",
+    "- **Split:** Patient-level 60/20/20 (0% leakage)\n",
+    "- **CV:** 5-fold patient-level stratified (54 pacientes train por fold)\n",
+    "- **Modelo:** TfidfVectorizer char(3-5) + LinearSVC(C=1.0, class_weight='balanced')\n",
+    "- **Preprocesamiento:** Agresivo (lowercase, sin tildes, sin puntuación)"
    ]
   }
  ],
